Updating text copy

--- a/Text/background_text.html
+++ b/Text/background_text.html
@@ -1,7 +1,9 @@
-<h4>All of the color compositions are a part of the HSB or CIELAB color space.</h4> 
+<h4>All of the color compositions are derived from either the HSB color space or CIELAB color model.</h4> 
 
-<p>HSB stands for hue-saturation-brightness, it is considered a more human-friendly way of describing color.</p>
+<p>HSB stands for hue-saturation-brightness, it is considered a human-friendly way of describing color. CIELAB is based on the human perception of color as well.</p>
 
 <p>Previous methods of describing color relied heavily on RGB, which represents how red, green, or blue a color is.</p>
 
-<p>Okay! So now that we know this. Click the next tab for more information on shade color composition you selected.</p>
+
+
+<p>Click the next tab for more information on shade color composition you selected.</p>
