--- a/Text/brightness.html
+++ b/Text/brightness.html
@@ -1,5 +1,5 @@
-<h4>Brightness</h4>
+<h4>Brightness represents, for lack of a better word, the brightness of the color.</h4>
 
-<p>Brightness represents, for lack of a better word, the brightness of the color.</p>
+<p>Brightness values range from 0 to 100%. Brightness interacts with saturation to represent a color. A color with 0% brightness is black, but a color with 100% brightness is the brightest form of the color. The only exception is if the saturation is at 0%, then the color is just white. </p>
 
-<p>For this metric, lower numbers are more black and higher numbers are more light.</p>
+<p>Brightness aligns with how one traditionally think of foundation shades. The foundation shades with the lowest percentage of brightness are also the darkest foundation shades.</p>
