--- a/Text/hue.html
+++ b/Text/hue.html
@@ -1,7 +1,5 @@
-<h4> Hue </h4>
-
-<p>In its simplest form, hue is a color wheel where each color is a number between 0 and 360 degrees.</p> 
+<h4>In its simplest form, hue is a color wheel where each color is a number between 0 and 360 degrees.</h4> 
 
 <p>Hue does not take into account how dark, intense, or light the color is. It is solely a representation of a color.</p> 
 
-<p>Amongst the foundation shades, hue values never passes 45 because that is when hue starts venturing away from the color yellow and into green. And who wants green foundation?</p>
+<p>Amongst the foundation shades visualized, the hue values never passes 45 degrees because that is when hue starts venturing away from the color yellow and into green. And who wants green foundation?</p>
