--- a/Text/lightness.html
+++ b/Text/lightness.html
@@ -1,4 +1,3 @@
-<h4>Lightness</h4>
+<h4> Lightness is the only color component derived from the CIELAB color model.</h4> <p>Lightness ranges from 0 to 100 where 0 is black and 100 is closer to white, depending on the amount of a (the position between red and green) and b (the position between yellow and blue).</p>
 
-
-<p> Lightness is derived from the CIELAB color space. For this metric, lower numbers are more black and higher numbers are more light.</p>
+<p>Lightness was the focus of The Pudding's Beauty Brawl article, as it is a concrete color component to assess the inclusivity of foundation shades.</p>
