--- a/Text/saturation.html
+++ b/Text/saturation.html
@@ -1,5 +1,5 @@
-<h4> Saturation </h4>
+<h4> Saturation represents the intensity or richness of the color.</h4> 
 
-<p> Saturation represents the intensity of the color.</p> 
+<p>Saturation values range from 0 to 100%. A lower saturated color will be more gray, and a highly saturated color will be the most intense or rich form of that color. </p>
 
-<p>For this metric, lower numbers have less color or are more grey. Saturation has a wider range which covers the more grey end of the scale (from 0 - 10% to the most intense >90%). </p>
+<p>Amongst all the foundation shades available in the visualization, saturation levels range from near 10% which is quite gray to near 100% which is incredibly rich.</p>
